--- a/2-Data-Gatheraing/Open-Source-API/experiments.ipynb
+++ b/2-Data-Gatheraing/Open-Source-API/experiments.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1fc11cf8-b81c-4b2b-ae51-999b9d03f118",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "b38cd147-08f4-4f0a-a37b-4eadc1ecd638",
    "metadata": {},
    "outputs": [],
@@ -497,7 +497,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "torchGPU",
    "language": "python",
    "name": "python3"
   },
