allhamdulilla done Eigen value eigen vector, and PCA

--- a/PCA/practical-example-on-MNIST-dataset.ipynb
+++ b/PCA/practical-example-on-MNIST-dataset.ipynb
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "((33600, 784), (8400, 784))"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4183,10 +4183,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# form the graph we can see 210 pca is almost cover 90% of data\n",
+    "\n",
+    "pca = PCA(n_components=210)\n",
+    "X_train_trf_final_model = pca.fit_transform(X_train)\n",
+    "X_test_trf_final_model = pca.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(33600,)"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9501190476190476"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = KNeighborsClassifier()\n",
+    "model.fit(X_train_trf_final_model, y_train)\n",
+    "\n",
+    "y_pred = model.predict(X_test_trf_final_model)\n",
+    "accuracy_score(y_pred, y_test)"
+   ]
   }
  ],
  "metadata": {
